# libcamera-rs

./: Cargo.toml
libcamera-sys/: Cargo.toml  build.rs  wrapper.h
libcamera/src/: compat_0_4.rs  lib.rs
