[package]
name = "libcamera-sys"
version = "0.3.0"
edition = "2021"
description = "Low-level unsafe bindings to libcamera"
documentation = "https://docs.rs/libcamera-sys"
repository = "https://github.com/lit-robotics/libcamera-rs"
license = "MIT OR Apache-2.0"
keywords = ["libcamera", "camera"]
categories = ["external-ffi-bindings", "computer-vision", "multimedia"]
readme = "../README.md"

[lib]
# libcamera comments are interpreted as rust code blocks failing the doctest
doctest = false

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
pkg-config = "0.3.26"
cc = "1.0"

[features]
default = []
# Add the feature flag for libcamera 0.4.0 compatibility
libcamera-0-4 = []
